--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     -webkit-tap-highlight-color:transparent; /* remove tap highlight */
   }
   
-  button.icon-btn svg {
+  button.icon-btn  {
     width:28px;
     height:28px;
-    pointer-events:none;   /* ✅ ensures taps hit the button, not the SVG */
+    pointer-events:none;   /* ✅ ensures taps hit the button, not the  */
   }
   button.icon-btn:disabled {
     background:#7f8c8d;
@@ -150,8 +150,12 @@
     <!-- Snap Button -->
     <button id="snapBtn" class="icon-btn" title="Snap Photo">
       <svg id="cameraIcon" viewBox="0 0 24 24">
-        <path fill="white" d="M20 5h-3.586l-1.707-1.707A.996.996 0 0014 3H10a.996.996 0 00-.707.293L7.586 5H4c-1.103 0-2 .897-2 2v11c0 1.104.897 2 2 2h16c1.103 0 2-.896 2-2V7c0-1.103-.897-2-2-2zM12 18c-2.209 0-4-1.791-4-4s1.791-4 4-4c2.208 0 4 1.791 4 4s-1.792 4-4 4z"/>
-        <circle fill="white" cx="12" cy="14" r="2.5"/>
+        <g>
+        	<path fill="white" d="M60,10H49.656l-6.828-6.828C42.078,2.422,41.062,2,40,2H24c-1.062,0-2.078,0.422-2.828,1.172L14.344,10H4
+        		c-2.211,0-4,1.789-4,4v44c0,2.211,1.789,4,4,4h56c2.211,0,4-1.789,4-4V14C64,11.789,62.211,10,60,10z M32,50
+        		c-8.836,0-16-7.164-16-16s7.164-16,16-16s16,7.164,16,16S40.836,50,32,50z"/>
+        	<circle fill="#231F20" cx="32" cy="34" r="8"/>
+        </g>
       </svg>
     </button>
 
