--- a/index.html
+++ b/index.html
@@ -71,15 +71,19 @@
     border:none;
     cursor:pointer;
     border-radius:50%;
-    width:72px;
-    height:72px;
+    width:64px;
+    height:64px;
     display:flex;
     align-items:center;
     justify-content:center;
     box-shadow:0 4px 12px rgba(41,128,185,0.4);
     transition:background-color 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
-    touch-action:manipulation;
-    -webkit-tap-highlight-color:transparent;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
+  }
+  /* Ensure icons/spinner/checkmark do not intercept taps */
+  button.icon-btn * {
+    pointer-events: none !important;
   }
   button.icon-btn:disabled {
     background:#7f8c8d;
@@ -97,7 +101,6 @@
   button.icon-btn svg {
     width:32px;
     height:32px;
-    pointer-events:none;
   }
   .spinner {
     border:3px solid rgba(255,255,255,0.3);
@@ -106,43 +109,26 @@
     width:28px;
     height:28px;
     animation:spin 1s linear infinite;
-    pointer-events:none;
   }
   @keyframes spin { 100% { transform: rotate(360deg); } }
+  .checkmark {
+    width:36px;
+    height:36px;
+    stroke:white;
+    stroke-width:4;
+    fill:none;
+  }
   canvas {
     border-radius:16px;
     box-shadow:0 8px 24px rgba(44,62,80,0.15);
-    width:100%;
+    width: 100%;
     max-width:320px;
     display:none;
     aspect-ratio:3/4;
     object-fit:cover;
   }
-  /* ✅ Fixed Checkmark Alignment */
-  .checkmark {
-    width:28px;
-    height:28px;
-    border-radius:50%;
-    border:2px solid white;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    transform:scale(0);
-    animation:popIn 0.3s forwards;
-  }
-  .checkmark:after {
-    content:'';
-    width:7px;
-    height:14px;
-    border:solid white;
-    border-width:0 2px 2px 0;
-    transform:rotate(45deg);
-  }
-  @keyframes popIn {
-    to { transform:scale(1); }
-  }
   @media(max-width:480px){
-    button.icon-btn{width:64px;height:64px;}
+    button.icon-btn{width:56px;height:56px;}
     button.icon-btn svg{width:28px;height:28px;}
     .camera-container {max-width:280px;}
     .button-canvas-wrapper {max-width:280px;}
@@ -163,8 +149,7 @@
   <div class="button-row">
     <!-- Snap Button -->
     <button id="snapBtn" class="icon-btn" title="Snap Photo">
-      <!-- ✅ NEW Camera SVG -->
-      <svg id="cameraIcon" version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+      <svg id="cameraIcon" version="1.0" xmlns="http://www.w3.org/2000/svg" width="80px" height="80px" viewBox="0 0 64 64">
         <g>
           <path fill="white" d="M60,10H49.656l-6.828-6.828C42.078,2.422,41.062,2,40,2H24c-1.062,0-2.078,0.422-2.828,1.172L14.344,10H4
             c-2.211,0-4,1.789-4,4v44c0,2.211,1.789,4,4,4h56c2.211,0,4-1.789,4-4V14C64,11.789,62.211,10,60,10z M32,50
@@ -176,7 +161,7 @@
 
     <!-- Download Button -->
     <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;" disabled>
-      <svg id="downloadIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <svg id="downloadIcon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
       </svg>
     </button>
@@ -190,9 +175,7 @@
 const video=document.getElementById("video");
 const canvas=document.getElementById("canvas");
 const snapBtn=document.getElementById("snapBtn");
-const cameraIcon=document.getElementById("cameraIcon");
 const downloadBtn=document.getElementById("downloadBtn");
-const downloadIcon=document.getElementById("downloadIcon");
 const flashOverlay=document.getElementById("flashOverlay");
 const ctx=canvas.getContext("2d");
 
@@ -230,7 +213,7 @@ function triggerFlash(){
 }
 
 function showSpinner(){
-  cameraIcon.style.display="none";
+  snapBtn.querySelector("svg").style.display="none";
   const spinner=document.createElement("div");
   spinner.className="spinner";
   spinner.id="loadingSpinner";
@@ -240,7 +223,7 @@ function showSpinner(){
 function hideSpinner(){
   const spinner=document.getElementById("loadingSpinner");
   if(spinner) spinner.remove();
-  cameraIcon.style.display="block";
+  snapBtn.querySelector("svg").style.display="block";
 }
 
 snapBtn.addEventListener("click",async()=>{
@@ -299,7 +282,6 @@ snapBtn.addEventListener("click",async()=>{
 downloadBtn.addEventListener("click",()=>{
   if(downloadBtn.disabled) return;
 
-  // ✅ Trigger Download Programmatically
   const maxW=900;
   let tempCanvas=canvas;
   if(canvas.width>maxW){
@@ -313,26 +295,27 @@ downloadBtn.addEventListener("click",()=>{
   const link=document.createElement("a");
   link.download=`photo_${new Date().toISOString()}.jpg`;
   link.href=tempCanvas.toDataURL("image/jpeg",0.4);
-  document.body.appendChild(link);
   link.click();
-  document.body.removeChild(link);
 
-  // ✅ Animate Green Checkmark
-  downloadBtn.style.background="#27ae60";
-  downloadIcon.style.display="none";
-  const check=document.createElement("div");
-  check.className="checkmark";
+  // ✅ show checkmark
+  const originalIcon=downloadBtn.querySelector("#downloadIcon");
+  originalIcon.style.display="none";
+  const check=document.createElementNS("http://www.w3.org/2000/svg","svg");
+  check.setAttribute("class","checkmark");
+  check.setAttribute("viewBox","0 0 24 24");
+  check.innerHTML=`<polyline points="20 6 9 17 4 12"/>`;
   downloadBtn.appendChild(check);
+  downloadBtn.style.background="#27ae60";
 
-  // ✅ Hide Button + Reset for Next Capture
   downloadBtn.disabled=true;
+
   setTimeout(()=>{
-    downloadBtn.style.display="none";
-    check.remove();
-    downloadBtn.style.background="#2980b9";
-    downloadIcon.style.display="block";
     canvas.style.display="none";
     ctx.clearRect(0,0,canvas.width,canvas.height);
+    downloadBtn.style.display="none";
+    downloadBtn.style.background="#2980b9";
+    check.remove();
+    originalIcon.style.display="block";
   },800);
 });
 
